--- a/Starter_Code/starter_code/VacationPy.ipynb
+++ b/Starter_Code/starter_code/VacationPy.ipynb
@@ -271,7 +271,7 @@
     "%%capture --no-display\n",
     "\n",
     "# Configure the map plot\n",
-    "humid_map = city_data_df.hvplot.points(x = \"Lng\", y = \"Lat\", size = \"Humidity\", tiles = True, color = \"Humidity\", xlabel = \"Longitude\", ylabel = \"Latitude\")\n",
+    "humid_map = city_data_df.hvplot.points(x = \"Lng\", y = \"Lat\", size = \"Humidity\", tiles = True, color = \"Humidity\", xlabel = \"Longitude\", ylabel = \"Latitude\") #Reference 1\n",
     "\n",
     "# Display the map\n",
     "humid_map"
@@ -817,7 +817,7 @@
     "%%capture --no-display\n",
     "\n",
     "# Configure the map plot\n",
-    "hotel_map = hotel_df.hvplot.points(x = \"Lng\", y = \"Lat\", tiles = True, size  = 100, hover_cols = [\"Hotel Name\", \"Country\"], xlabel = \"Longitude\", ylabel = \"Latitude\", color = \"Humidity\")\n",
+    "hotel_map = hotel_df.hvplot.points(x = \"Lng\", y = \"Lat\", tiles = True, size  = 100, hover_cols = [\"Hotel Name\", \"Country\"], xlabel = \"Longitude\", ylabel = \"Latitude\", color = \"Humidity\") #Reference 1\n",
     "\n",
     "# Display the map\n",
     "hotel_map"
