--- a/Starter_Code/starter_code/VacationPy.ipynb
+++ b/Starter_Code/starter_code/VacationPy.ipynb
@@ -317,6 +317,7 @@
     }
    ],
    "source": [
+    "%%capture --no-display\n",
     "\n",
     "# Configure the map plot\n",
     "humid_map = city_data_df.hvplot.points(x = \"Lng\", y = \"Lat\", size = \"Humidity\", tiles = True, color = \"Humidity\", xlabel = \"Longitude\", ylabel = \"Latitude\") #Reference 1\n",
@@ -862,6 +863,7 @@
     }
    ],
    "source": [
+    "%%capture --no-display\n",
     "\n",
     "# Configure the map plot\n",
     "hotel_map = hotel_df.hvplot.points(x = \"Lng\", y = \"Lat\", tiles = True, size  = 100, hover_cols = [\"Hotel Name\", \"Country\"], xlabel = \"Longitude\", ylabel = \"Latitude\", color = \"Humidity\") #Reference 1\n",
